# Tubes3_lo-siento

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  init.sql  pyproject.toml  requirements.txt
mysql-init/: 1-schema.sql  2-data.sql
src/: main.py
src/algorithms/: aho_corasick.py  boyer_moore.py  kmp.py  levenshtein.py  regex_search.py
src/db/: database_manager.py
src/gui/: main_window.py
src/utils/: cipher.py  flow_layout.py  pdf_processor.py
